[gd_scene load_steps=6 format=3 uid="uid://dgh5mt7w2shk1"]

[ext_resource type="Script" uid="uid://c7t18ge8j1f1f" path="res://root.gd" id="1_pyidc"]
[ext_resource type="PackedScene" uid="uid://dckmy2r1vu3re" path="res://level.tscn" id="2_28aoi"]
[ext_resource type="Theme" uid="uid://33p8pjnjvodd" path="res://assets/theme.tres" id="2_vvh5c"]
[ext_resource type="Texture2D" uid="uid://f423j2srnckj" path="res://assets/Bg.png" id="3_28aoi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("3_28aoi")

[node name="Root" type="Node"]
script = ExtResource("1_pyidc")
level_scene = ExtResource("2_28aoi")

[node name="Levels" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="Levels"]
_spawnable_scenes = PackedStringArray("uid://dckmy2r1vu3re")
spawn_path = NodePath("..")
spawn_limit = 1

[node name="Background" type="Panel" parent="."]
modulate = Color(0.241156, 0.241156, 0.241156, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="MainMenuStuff" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ButtonContainer" type="HBoxContainer" parent="MainMenuStuff"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 183.0
offset_top = 718.0
offset_right = 1697.0
offset_bottom = 914.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_vvh5c")
theme_override_constants/separation = 25
metadata/_edit_group_ = true

[node name="Start" type="Button" parent="MainMenuStuff/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vvh5c")
text = "Start"

[node name="Host" type="Button" parent="MainMenuStuff/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Join" type="Button" parent="MainMenuStuff/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join
"

[node name="Quit" type="Button" parent="MainMenuStuff/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[node name="PlayersJoined" type="Label" parent="MainMenuStuff"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 651.0
offset_top = 605.0
offset_right = 1229.0
offset_bottom = 693.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_vvh5c")
text = "Players in Lobby: 1"
horizontal_alignment = 1

[node name="Title" type="Label" parent="MainMenuStuff"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 194.0
offset_top = 134.0
offset_right = 1686.0
offset_bottom = 445.0
grow_horizontal = 2
theme = ExtResource("2_vvh5c")
theme_override_font_sizes/font_size = 256
text = "Game Name"
horizontal_alignment = 1

[node name="ConnectionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ConnectionTimer" to="." method="_on_connection_timer_timeout"]
